--- a/src/views/plan/Plan.css
+++ b/src/views/plan/Plan.css
@@ -47,6 +47,8 @@ li {
     font-family: Quicksand;
     font-style: normal;
     font-weight: normal;
+    margin-bottom: 10px;
+    font-size: 20px;
 }
 
 h2 {
