--- a/src/views/registro/Registro.css
+++ b/src/views/registro/Registro.css
@@ -1,61 +1,20 @@
-div#imagen {
-    width: 50%;
-    height: 50%;
-    background-color: white;
-    float: right;
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
+.content {
+    display: flex;
+    align-items: center;
+    height: 70%;
+    flex-direction: row;
 }
 
-div#formulario {
-    float: left;
+.panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 50%;
-    height: 50%;
-    background-color: white;
-    padding: 30px;
-    margin: auto;
-    margin-top: 200px;
-}
-
-div#grande {
-    float: left;
-    width: 100%;
     height: 100%;
-    background-color: white;
-    padding: 30px;
-    margin: auto;
 }
 
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
-
-div#datos {
-    background-color: white;
-    margin-bottom: 16px;
-    border-radius: .2rem;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-
-input#aaa {
-    width: 100%;
-}
-
-.button {
-    width: 140px;
-    height: 50px;
-    background-color: #ABEDFC;
-    font-family: Arial, Helvetica, sans-serif;
-    border: none;
-    font-size: large;
-    background-size: 10px;
-    border-radius: 1px;
-}
-
-input {
-    height: 25px;
+.panel:first-child {
+    border-right: 2px solid #000000;
+    align-items: left;
 }
